# qrcode-generator

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: lib.rs  qr_code_error.rs
tests/: tests.rs
