[package]
name = "qrcode-generator"
version = "5.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.67"
repository = "https://github.com/magiclen/qrcode-generator"
homepage = "https://magiclen.org/qrcode-generator"
keywords = ["qrcode", "generate", "png", "svg", "vec"]
categories = ["encoding", "multimedia::images"]
description = "Generate QR Code matrices and images in RAW, PNG and SVG formats."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
qrcodegen = "1.8"
html-escape = "0.2"

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["png"]

[dev-dependencies]
manifest-dir-macros = "0.1"

[features]
default = ["image"]

[package.metadata.docs.rs]
all-features = true
